# rust-cli-tools

./: README.md
guess-the-animal/: .env  Cargo.toml  database.db  diesel.toml
guess-the-animal/migrations/2024-08-04-164316_create_posts/: down.sql  up.sql
guess-the-animal/src/: database_utils.rs  endings.rs  lib.rs  main.rs  models.rs  schema.rs  utils.rs
guess-the-animal/src/database_utils/: database_animal_utils.rs  database_question_utils.rs  mod.rs
guess-the-animal/src/diesel_files/: mod.rs  models.rs  schema.rs
url/: CHANGELOG.md  Cargo.toml  README.md
url/src/: main.rs
